--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
   <header class="header">
     <div class="header-content">
       <div class="profile">
-        <img
-          src="https://lh3.googleusercontent.com/sitesv/AAzXCkeh5CkUsTwZArP02IJT_xB-euX7WOWe-OEM_6qJ5ck5wkj1jSgH5A6M75qdvgonvRTwO1MptjWQFO0KgQktXr3gISpZRDUTkZt6ia2Op-2qvkCUGwolXLW5wu3pp16PUnAEJQbVl8oRFAHLX6ZgQ4sAPOWvZ9lGe6FLaOAl5x9R9dsLv5c5kaYbAH9yq7tbviQJxzYxYXpaJZA=w1280"
-          alt="Vitali Gretschko" class="profile-photo" />
+        <img src="Supporting Documents/unnamed.jpg" alt="Vitali Gretschko" class="profile-photo" />
         <div class="profile-info">
           <h1>Vitali Gretschko</h1>
           <p class="title">Professor of Economics</p>
