Added Policy report

--- a/index.html
+++ b/index.html
@@ -177,6 +177,13 @@
       </div>
       <div class="publication-list compact">
         <article>
+          <h4>Optimierung des Verhandlungsgebot auf dem Telekommunikationsmarkt</h4>
+          <p class="meta">with Axel Ockenfels, Achim Wambach | <strong>Wirtschaftsdienst</strong>, 104(11), 794-799
+            (2024)</p>
+          <a href="https://www.wirtschaftsdienst.eu/inhalt/jahr/2024/heft/11/beitrag/optimierung-des-verhandlungsgebot-auf-dem-telekommunikationsmarkt.html"
+            class="text-link" target="_blank">Paper</a>
+        </article>
+        <article>
           <h4>Empfehlungen für das Marktdesign für die Befüllung von Gasspeichern</h4>
           <p class="meta">with Axel Ockenfels | <strong>Wirtschaftsdienst</strong>, 103(2), 105-111 (2023)</p>
         </article>
@@ -281,13 +288,12 @@
       <div class="highlights-grid">
         <div class="highlight-card">
           <h4>Industry Consulting</h4>
-          <p>Consulting projects for BMW, Porsche, Mann + Hummel, BOSCH, Cimpress, and others on strategic procurement
+          <p>Consulting projects for several Fortune 500 Companies on game theory, auctions, strategic procurement,
             and market design.</p>
         </div>
         <div class="highlight-card">
           <h4>Spectrum Auctions</h4>
-          <p>Advised bidders and regulators in frequency auctions in Germany, Luxembourg, Poland, and Georgia
-            (2014-2020).</p>
+          <p>Advised bidders and regulators in frequency auctions in Germany, Luxembourg, Poland, and Georgia.</p>
         </div>
         <div class="highlight-card">
           <h4>Energy Markets</h4>
