--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       <div class="highlights-grid">
         <div class="highlight-card">
           <h4>Industry Consulting</h4>
-          <p>Consulting projects for several Fortune 500 Companies on game theory, auctions, strategic procurement,
+          <p>Consulting projects for several Fortune 500 companies on game theory, auctions, strategic procurement,
             and market design.</p>
         </div>
         <div class="highlight-card">
